--- a/custom/template/page.html
+++ b/custom/template/page.html
@@ -2,6 +2,6 @@
 
 {% block logo %}
 <span id="jupyterhub-logo" class="pull-left">
-    <a href="{{logo_url or base_url}}"><img src='{{base_url}}dea-logo-inline.svg' alt='JupyterHub' class='jpy-logo' title='Home'/></a>
+    <a href="{{logo_url or base_url}}"><img src='{{base_url}}branding/dea-logo-inline.svg' alt='DEA Sandbox' class='jpy-logo' title='Home'/></a>
 </span>
 {% endblock %}
