Fix feedback text size

--- a/custom/template/page.html
+++ b/custom/template/page.html
@@ -46,6 +46,7 @@
     .feedback-button span {
         vertical-align: top;
         line-height: 2.2;
+        font-size: 14px;
     }
 </style>
 {% endblock %}
