Customise sandbox webbrowser tab title

--- a/template/page.html
+++ b/template/page.html
@@ -1,5 +1,7 @@
 {% extends "templates/page.html" %}
 
+{% block title %}{{ html_title }}{% endblock %}
+
 {% block meta %}
 <style>
     .feedback-button-wrapper {
